--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,5 +21,7 @@ jobs:
       - name: SemVer
         run: docker run --rm -e GITHUB_TOKEN=${GITHUB_TOKEN} -v "${PWD}":/app divido/devtools:semver
       - name: Version
-        run: cat .RELEASE_VERSION
+        run: |
+          release="$(cat .RELEASE_VERSION)"
+          echo $release
 
