--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,13 +15,16 @@ jobs:
     timeout-minutes: 10
     env:
       GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+      RELEASE_VERSION: ~
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
       - name: SemVer
-        run: docker run --rm -e GITHUB_TOKEN=${GITHUB_TOKEN} -v "${PWD}":/app divido/devtools:semver
-      - name: Version
         run: |
-          release="$(cat .RELEASE_VERSION)"
-          echo $release
+          docker run --rm -e GITHUB_TOKEN=${GITHUB_TOKEN} -v "${PWD}":/app divido/devtools:semver
+          if test -f .RELEASE_VERSION; then
+            export RELEASE_VERSION="$(cat .RELEASE_VERSION)"
+          fi
+      - name: Version
+        run: echo "created version: $RELEASE_VERSION"
 
