--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,8 @@ jobs:
         run: |
           docker run --rm -e GITHUB_TOKEN=${GITHUB_TOKEN} -v "${PWD}":/app divido/devtools:semver
           if test -f .RELEASE_VERSION; then
-            export RELEASE_VERSION="$(cat .RELEASE_VERSION)"
+            release_version="$(cat .RELEASE_VERSION)"
+            echo "::set-env name=RELEASE_VERSION::$release_version"
           fi
       - name: Version
         run: echo $RELEASE_VERSION
