--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - master
+      - develop
       - alpha
       - beta
       - next
@@ -14,11 +15,17 @@ jobs:
     timeout-minutes: 10
     env:
       GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+      RELEASE_VERSION: ~
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
       - name: SemVer
-        run: docker run --rm -e GITHUB_TOKEN=${GITHUB_TOKEN} -v "${PWD}":/app divido/devtools:semver
+        run: |
+          docker run --rm -e GITHUB_TOKEN=${GITHUB_TOKEN} -v "${PWD}":/app divido/devtools:semver
+          if test -f .RELEASE_VERSION; then
+            release_version="$(cat .RELEASE_VERSION)"
+            echo "::set-env name=RELEASE_VERSION::$release_version"
+          fi
       - name: Version
-        run: cat .RELEASE_VERSION
+        run: echo $RELEASE_VERSION
 
